src/test/ui/issues/issue-58856-2.stderr
error: expected parameter name, found `->`
  --> $DIR/issue-58856-2.rs:6:26
   |
LL |     fn how_are_you(&self -> Empty {
   |                          ^^ expected parameter name

error: missing separator `,`
  --> $DIR/issue-58856-2.rs:6:28
   |
LL |     fn how_are_you(&self -> Empty {
   |                   -        ^ help: missing `,`
   |                   |
   |                   while parsing the list starting here

error: expected `;` or `{`, found `)`
  --> $DIR/issue-58856-2.rs:11:1
   |
LL | impl Howness for () {
   |                     - while parsing this item list starting here
...
LL | }
   | ^
   | |
   | expected `;` or `{`
   | the item list ends here

error: aborting due to 3 previous errors

